CW-1249 Fix white space for add recipient button

--- a/src/pages/common/components/CommonTabPanels/components/FeedTab/components/NewProposalCreation/components/AddRecipient/AddRecipient.module.scss
+++ b/src/pages/common/components/CommonTabPanels/components/FeedTab/components/NewProposalCreation/components/AddRecipient/AddRecipient.module.scss
@@ -36,7 +36,7 @@ th {
 
 th:first-child {
   padding-left: 1rem;
-  width: 180px;
+  width: 10rem;
 }
 
 td {
@@ -46,7 +46,7 @@ td {
 
 td:first-child {
   padding-left: 1rem;
-  width: 18px;
+  width: 1.125rem;
 }
 
 .addRecipientButton {
